<resources>
    <string name="app_name">Andaman</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">coJEET</string>
    <string name="nav_header_subtitle">MyGov</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Saadhan</string>
    <string name="menu_gallery">Logout</string>
    <string name="menu_slideshow">Graahak</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Pehchaan</string>
    <string name="menu_send">Charcha</string>


    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="login_button">LOGIN</string>
    <string name="sign_up">Sign up</string>
    <string name="no_text"> </string>
    <string name="sign_up_button">SIGN UP</string>
    <string name="log_in">Login</string>
    <string name="title_activity_profile">ProfileActivity</string>


    <string name="profile_name">Induce Smile</string>
    <string name="country_location">Sweden</string>

    <string name="menu_profile">Profile</string>
    <string name="menu_chat">Chat</string>
    <string name="menu_contact">Contact</string>
    <string name="menu_online">Online</string>
    <string name="menu_login">Login</string>
    <string name="menu_signup">SignUp</string>

    <string name="menu_settings">Settings</string>
    <string name="menu_logout">Logout</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="profile_names">Display name</string>
    <string name="induce_smile">Induce Smile</string>

    <string name="edit_profile_name">Name</string>
    <string name="edit_profile_country">Country</string>
    <string name="edit_profile_phone">Phone number</string>
    <string name="edit_profile_hobby">Hobby</string>
    <string name="select_date">Date</string>
    <string name="save_edit">Save edit</string>
    <string name="smart_reply_error">Error</string>

    <array name="genres">
        <item>Door to door seller</item>
        <item>Small farmer</item>
        <item>Transport Provider</item>
        <item>Construction Labourer</item>
    </array>
    <array name="genres2">
        <item>Rice</item>
        <item>Pulse</item>
        <item>Flour</item>
        <item>Sugar</item>
    </array>
    <array name="genres3">
        <item>General medical store</item>
        <item>Homoeopathic medical store</item>
        <item>Ayurveda medical store</item>
        <item>First aid centre</item>
    </array>
    <array name="genres4">
        <item>100-200 beds</item>
        <item>200-300 beds</item>
        <item>300-400 beds</item>
        <item>400-500 beds</item>
    </array>
    <array name="genres5">
        <item>Mask</item>
        <item>Sanitizer</item>
        <item>COVID treatment kit</item>
        <item>COVID safety gear</item>
    </array>

    <string name="link1">
        <a href = "https://mohfw.gov.in/">VISIT</a>
    </string>
    <string name="link2">
        <a href = "https://www.google.com/aclk?sa=L&amp;ai=DChcSEwj6qNDq5N7pAhWD15YKHaz1CeYYABAAGgJ0bA&amp;sig=AOD64_1bN4x8F42MWGGiqGH_YaXMi71DfA&amp;q=&amp;ved=2ahUKEwix6Mbq5N7pAhU_zjgGHVCWAJUQ0Qx6BAgZEAE&amp;adurl=">VISIT</a>
    </string>
    <string name="link3">
        <a href = "https://www.mha.gov.in/">VISIT</a>
    </string>
    <string name="link4">
        <a href = "https://serviceonline.gov.in/epass/">VISIT</a>
    </string>
    <string name="link5">
        <a href = "https://www.google.com/aclk?sa=L&amp;ai=DChcSEwiFx6Lq5t7pAhVNpJYKHXDCAs8YABAAGgJ0bA&amp;sig=AOD64_1vFap-tHH59Z63t41qDlEy612HXA&amp;q=&amp;ved=2ahUKEwjimZbq5t7pAhVNxTgGHYgaDHkQ0Qx6BAgMEAE&amp;adurl=">VISIT</a>
    </string>
    <string name="link6">
        <a href = "https://mygov.in/task/join-war-against-covid-19-register-volunteer/">VISIT</a>
    </string>
    <string name="link7">
        <a href = "https://serviceonline.gov.in/">VISIT</a>
    </string>
    <string name="link8">
        <a href = "http://covid19epass.hp.gov.in/">VISIT</a>
    </string>
    <string name="link9">
        <a href = "https://srinagar.nic.in/public-utility-category/hospitals/">VISIT</a>
    </string>
    <string name="link10">
        <a href = "https://www.hpsbys.in/content/iuu">VISIT</a>
    </string>
    <string name="map_key" translatable="false">AIzaSyBLflUreqlf9GzZGaN1GHiWarOH7v6gL-o</string>


</resources>
